# My-Code-Samples-CUnit-Testing

./: Average_Tests.c  Average_Tests.h  CMakeLists.txt  Max_Tests.c  Max_Tests.h  avg_and_max.c  main.c
